--- a/2023-09-06_BaSe_Dauertest_Dev.ipynb
+++ b/2023-09-06_BaSe_Dauertest_Dev.ipynb
@@ -57,16 +57,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "3417ef5a-b8e0-4d16-b312-bf22d49b80de",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_dockingstate():\n",
-    "    outp = call_pcu('get_dockingstate')\n",
+    "    outp = call_pcu('get dockingstate')\n",
     "    for line in outp:\n",
     "        if 'pcu_docking' in line.decode():\n",
-    "            return line.decode().strip().split('ch> ')[1]"
+    "            return line.decode().strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "76c5c9f7-f6e7-4512-885b-e357cfaadb69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_currentlog():\n",
+    "    outp = call_pcu('get currentlog')\n",
+    "    values_raw = outp[2].decode().strip().split(',')\n",
+    "    values = [int(val) for val in values_raw[1:] if val]\n",
+    "    return values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7215c5be-ac73-4fcb-83ae-7b7878f104bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calling pcu with cmd power hdd on\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[b'cmd power hdd on\\r\\n', b'p', b'ower successful\\n', b'ch> ', b'']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "call_pcu('cmd power hdd on')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "93a41ebd-7a75-4dac-bf00-cd16cc49efb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calling pcu with get dockingstate\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'pcu_dockingState3_allDockedPwrOn'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_dockingstate()"
    ]
   },
   {
@@ -79,13 +149,148 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "calling pcu with get_dockingstate\n"
+      "calling pcu with get currentlog\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'pcu_dockingState1_undocked'"
+       "[509,\n",
+       " 270,\n",
+       " 239,\n",
+       " 181,\n",
+       " 157,\n",
+       " 150,\n",
+       " 136,\n",
+       " 133,\n",
+       " 143,\n",
+       " 142,\n",
+       " 161,\n",
+       " 153,\n",
+       " 167,\n",
+       " 152,\n",
+       " 174,\n",
+       " 172,\n",
+       " 160,\n",
+       " 183,\n",
+       " 171,\n",
+       " 183,\n",
+       " 173,\n",
+       " 152,\n",
+       " 146,\n",
+       " 129,\n",
+       " 163,\n",
+       " 117,\n",
+       " 157,\n",
+       " 153,\n",
+       " 151,\n",
+       " 143,\n",
+       " 144,\n",
+       " 143,\n",
+       " 147,\n",
+       " 148,\n",
+       " 136,\n",
+       " 155,\n",
+       " 160,\n",
+       " 117,\n",
+       " 155,\n",
+       " 137,\n",
+       " 136,\n",
+       " 142,\n",
+       " 139,\n",
+       " 133,\n",
+       " 147,\n",
+       " 138,\n",
+       " 152,\n",
+       " 162,\n",
+       " 152,\n",
+       " 143,\n",
+       " 143,\n",
+       " 135,\n",
+       " 159,\n",
+       " 147,\n",
+       " 141,\n",
+       " 156,\n",
+       " 154,\n",
+       " 144,\n",
+       " 143,\n",
+       " 135,\n",
+       " 132,\n",
+       " 141,\n",
+       " 143,\n",
+       " 128,\n",
+       " 163,\n",
+       " 117,\n",
+       " 149,\n",
+       " 148,\n",
+       " 145,\n",
+       " 149,\n",
+       " 141,\n",
+       " 138,\n",
+       " 156,\n",
+       " 160,\n",
+       " 152,\n",
+       " 146,\n",
+       " 133,\n",
+       " 133,\n",
+       " 140,\n",
+       " 142,\n",
+       " 131,\n",
+       " 146,\n",
+       " 138,\n",
+       " 120,\n",
+       " 165,\n",
+       " 160,\n",
+       " 144,\n",
+       " 141,\n",
+       " 143,\n",
+       " 155,\n",
+       " 162,\n",
+       " 144,\n",
+       " 144,\n",
+       " 144,\n",
+       " 160,\n",
+       " 148,\n",
+       " 127,\n",
+       " 152,\n",
+       " 137,\n",
+       " 136,\n",
+       " 146,\n",
+       " 140,\n",
+       " 160,\n",
+       " 148,\n",
+       " 146,\n",
+       " 161,\n",
+       " 163,\n",
+       " 146,\n",
+       " 144,\n",
+       " 144,\n",
+       " 133,\n",
+       " 166,\n",
+       " 154,\n",
+       " 154,\n",
+       " 142,\n",
+       " 152,\n",
+       " 162,\n",
+       " 138,\n",
+       " 136,\n",
+       " 142,\n",
+       " 143,\n",
+       " 126,\n",
+       " 165,\n",
+       " 155,\n",
+       " 147,\n",
+       " 142,\n",
+       " 147,\n",
+       " 156,\n",
+       " 142,\n",
+       " 136,\n",
+       " 147,\n",
+       " 137,\n",
+       " 117,\n",
+       " 144,\n",
+       " 152,\n",
+       " 0]"
       ]
      },
      "execution_count": 28,
@@ -94,7 +299,7 @@
     }
    ],
    "source": [
-    "get_dockingstate()"
+    "get_currentlog()"
    ]
   },
   {
